# opencl-toolbox

./: .gitignore  CMakeLists.txt  IDEAS  LICENSE  README  clbuffer.m  clfloat.m  clkernel.m  clobject.m  make.m  opencl.m  test_openclcmd.m  test_openclmatlab.m  test_operations.m
cl/: matlab_kernels_float.cl  simple_add.cl  test_kernels.m
cmake_modules/: FindOpenCL.cmake
include/ray/opencl/: OCLBuffer.h  OCLCommandQueue.h  OCLConstants.h  OCLContext.h  OCLDevice.h  OCLError.h  OCLEvent.h  OCLKernel.h  OCLPlatform.h  OCLProgram.h  OCLUtils.h  ocl_device_properties.h  opencl.h
src/: CMakeLists.txt  get_opencl_info.cpp  openclcmd.cpp  run_opencl_file.cpp
